# AOC2023

./: .gitignore  Cargo.toml
src/day01/: part1.rs  part2.rs
src/day02/: part1.rs  part2.rs
src/day03/: part1.rs  part2.rs
src/day04/: part1.rs  part2.rs
src/day05/: part1.rs  part2.rs
src/day06/: part1.rs  part2.rs
src/day07/: part1.rs  part2.rs
