[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01part1"
path = "src/day01/part1.rs"

[[bin]]
name = "day01part2"
path = "src/day01/part2.rs"

[[bin]]
name = "day02part1"
path = "src/day02/part1.rs"

[[bin]]
name = "day02part2"
path = "src/day02/part2.rs"

[[bin]]
name = "day03part1"
path = "src/day03/part1.rs"

[[bin]]
name = "day03part2"
path = "src/day03/part2.rs"

[[bin]]
name = "day04part1"
path = "src/day04/part1.rs"

[[bin]]
name = "day04part2"
path = "src/day04/part2.rs"

[[bin]]
name = "day05part1"
path = "src/day05/part1.rs"

[[bin]]
name = "day05part2"
path = "src/day05/part2.rs"

[[bin]]
name = "day06part1"
path = "src/day06/part1.rs"

[[bin]]
name = "day06part2"
path = "src/day06/part2.rs"

[dependencies]

